--- a/predicto/src/main/resources/application.properties
+++ b/predicto/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 server.port=8000
 
 ##  DATABASE
-spring.datasource.url=jdbc:mysql://18.102.24.178:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
-
+spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=87!tyIlp?1
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
 
