--- a/predicto/src/main/resources/application.properties
+++ b/predicto/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8000
 
 ##  DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=87!tyIlp?1
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=87!tyIlp?1
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
@@ -16,7 +16,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialec
 spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Rome
 
 # default values none | update | create-drop
-spring.jpa.hibernate.ddl-auto = update
+## SET it TO none in production environment
+spring.jpa.hibernate.ddl-auto = update         
 
 # default values never | always
 spring.sql.init.mode=always
@@ -30,9 +31,10 @@ logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.org.springframework=info
-logging.level.it.itsictpiemonte.myspringboot=info
+#logging.level.it.itsictpiemonte.myspringboot=info
 
 ## Jackson Properties
 spring.jackson.serialization.indent-output=true
 
-
+# Documentation Path
+springdoc.api-docs.path=/docs
