--- a/preditco-frontend/package.json
+++ b/preditco-frontend/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
