--- a/predicto/src/main/resources/application.properties
+++ b/predicto/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8000
 
 ##  DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=87!tyIlp?1
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=87!tyIlp?1
+
+## DATABASE COPIA LOCALE
+spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
@@ -31,10 +31,13 @@ logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 logging.level.org.springframework=info
-#logging.level.it.itsictpiemonte.myspringboot=info
 
 ## Jackson Properties
 spring.jackson.serialization.indent-output=true
 
-# Documentation Path
+# Documentation {Json} Path
 springdoc.api-docs.path=/docs
+
+# disable the documentation
+#springdoc.api-docs.enabled=false
+
