--- a/preditco-frontend/package.json
+++ b/preditco-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.1.1",
+    "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
