--- a/preditco-frontend/package.json
+++ b/preditco-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.1.1",
+    "express": "^4.18.2",
     "gsap": "^3.11.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.2",
+    "serve": "^14.1.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -28,6 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "serve": "serve -s build -l 3000",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
