--- a/preditco-frontend/package.json
+++ b/preditco-frontend/package.json
@@ -22,7 +22,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "sass": "^1.56.2",
-    "serve": "^14.1.2",
+    "swiper": "^8.4.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -30,7 +30,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "serve": "serve -s build -l 3000",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
