--- a/predicto/src/main/resources/application.properties
+++ b/predicto/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8000
 
 ##  DATABASE
-#spring.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+#.datasource.url=jdbc:mysql://localhost:3306/InfoSense?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
 #spring.datasource.username=root
 #spring.datasource.password=87!tyIlp?1
 
 ## DATABASE COPIA LOCALE
-spring.datasource.url=jdbc:mysql://localhost:3306/predictoprova2?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/predicto?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=
 
