latest backend version

--- a/predicto/src/main/resources/application.properties
+++ b/predicto/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8080
 
 ## DATABASE COPIA LOCALE
 spring.datasource.url=jdbc:mysql://localhost:3306/predicto?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=predicto
+spring.datasource.password=predicto
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=Europe/Rome
 
 # default values none | update | create-drop
 ## SET it TO none in production environment
-spring.jpa.hibernate.ddl-auto = none       
+spring.jpa.hibernate.ddl-auto = none      
 
 # default values never | always
 spring.sql.init.mode=always
