--- a/Backend/predicto/src/main/resources/application.properties
+++ b/Backend/predicto/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 #spring.datasource.password=87!tyIlp?1
 
 ## DATABASE COPIA LOCALE
-spring.datasource.url=jdbc:mysql://localhost:3306/predicto?createDatabaseIfNotExist=true&autoReconnect=true&useSLL=false&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/predicto
 spring.datasource.username=predicto
 spring.datasource.password=predicto
 
